# Summer-Studentship

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Dockerfile  README.md  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: wbs-task.yml
apps/TsunamiGUI/: CMakeLists.txt  README.md  mainwindow.h  mainwindow.ui
apps/tsunami_cli/: CMakeLists.txt  main.cpp
apps/tsunami_gui/: CMakeLists.txt  ShellController.cpp  ShellController.hpp  main.cpp
apps/tsunami_gui/qml/: Main.qml
apps/tsunami_gui/qml/components/: ApplicationHeader.qml  DiagnosticPanel.qml  NavigationDelegate.qml  NavigationRail.qml  PlaceholderPage.qml  ServiceStatusBar.qml
apps/tsunami_gui/qml/pages/: DataPage.qml  DomainPage.qml  MeshPage.qml  PhysicsPage.qml  PostProcessingPage.qml  RunPage.qml  SolverPage.qml
architecture/: application_service_map_lucidchart_v0.1.txt  application_service_policy_v0.1.json  case_lifecycle_lucidchart_v0.1.txt  case_lifecycle_policy_v0.1.json  diagnostic_failure_flow_lucidchart_v0.1.txt  diagnostic_failure_policy_v0.1.json  gui_shell_map_lucidchart_v0.1.txt  gui_shell_policy_v0.1.json  interface_contract_map_lucidchart_v0.1.txt  interface_contract_policy_v0.1.json  layer_ownership_policy_v0.1.json  software_layer_map_lucidchart_v0.1.txt  target_dependency_graph_lucidchart_v0.1.txt  target_dependency_policy_v0.1.json
cmake/: TsunamiCompilerWarnings.cmake
data/: README.md
docs/Latex/Notes/: Doc.tex
docs/Latex/Studentship Proposal/: Studentship_Proposal.tex  Updated_Proposal.tex
docs/Latex/Studentship Proposal/References/: .bib
docs/Latex/Style/: coursework-report-core.sty
docs/Markdowns/: build_linux_docker.md  build_windows_mingw.md  dependencies.md  repository_layout.md  workflow.md
docs/Research Papers/: Jira.csv  mendeley_paper_tag_register_v0.2.xlsx  mendeley_paper_tag_register_v0.3.xlsx  regional_2d_nlswe_source_assignment_v0.1.md
docs/Research Papers/1sec/: .html  affiniti_signature_builder.html
docs/Research Papers/3d/: local_3d_model_research_staging_v0.1.md  local_3d_source_assignment_v0.1.md
docs/Research Papers/Excess/: fsi_high_level_progress_v0.1.tex  res-str_bib_additions_v0.2.bib  res-str_fsi_insertions_v0.2.tex  research_workstream_chat_handoff_fsi_v0.1.md  research_workstream_pdf_directory_structure_v0.3.md
docs/governance/: pre_wbs_repository_inventory_v0.1.md
docs/project-management/: build-audit-applicability.md  build-workstream.md  github-project-setup.md  manual-wbs-workflow.md
docs/project-management/issues/: SW-BDP-BLD-04-01.md
docs/project-management/jira/: pending_research_wbs_changes.csv
docs/workstream/: README.md
docs/workstream/RES - Research/: README.md
docs/workstream/RES - Research/RES-DAT - Environmental Data and Case-Study Definition/: candidate-defence-data-feasibility-plan.md  res-dat.bbl  res-dat.bib  res-dat.tex
docs/workstream/RES - Research/RES-GEO - Barrier Geometry and Spatial Representation/: res-geo.bbl  res-geo.bib  res-geo.tex
docs/workstream/RES - Research/RES-ML - Machine-Learning Methodology/: res-ml.bib  res-ml.tex
docs/workstream/RES - Research/RES-MOD - Mathematical Model and Coupling/: res-mod.bbl  res-mod.bib  res-mod.tex
docs/workstream/RES - Research/RES-NUM - Numerical Methods, Accuracy and Stability/: res-num.bbl  res-num.bib  res-num.tex
docs/workstream/RES - Research/RES-OPT - Design Optimisation/: res-opt.bib  res-opt.tex
docs/workstream/RES - Research/RES-PHY - Tsunami and Coastal Fluid Dynamics/: res-phy.bbl  res-phy.bib  res-phy.tex
docs/workstream/RES - Research/RES-STR - Materials, Structural Response and Damage/: res-str.bbl  res-str.bib  res-str.tex
docs/workstream/RES - Research/RES-SUS - Sustainability and Environmental Impact/: res-sus.bib  res-sus.tex
docs/workstream/RES - Research/RES-VER - Verification, Testing and Uncertainty Methodology/: res-ver.bbl  res-ver.bib  res-ver.tex
docs/workstream/RES - Research/decisions/: project_scope_change_existing_defence_surrogate.md  (+1 more)
docs/workstream/SWE - Software/: README.md
matlab/: main.m
scripts/: bootstrap_external.ps1  bootstrap_external.sh  build_docker.ps1  build_windows_qt.ps1
src/: CMakeLists.txt  main.cpp  test.cpp
src/application/: CMakeLists.txt
src/application/include/tsunami/application/: ApplicationService.hpp  ServiceCapabilities.hpp  ServiceFactory.hpp  ServiceOperations.hpp
src/application/src/: NoSolverApplicationService.cpp
src/core/: Constants.hpp  Error.hpp  Results.hpp  Types.hpp
src/core/include/tsunami/core/: Cancellation.hpp  Constants.hpp  Diagnostic.hpp  Error.hpp  Identity.hpp  Observer.hpp  Result.hpp  Status.hpp  Types.hpp
src/coupling/include/tsunami/coupling/: Replay.hpp
src/data/include/tsunami/data/: Io.hpp  References.hpp
src/fvm/include/tsunami/fvm/: Field.hpp  Mesh.hpp
src/l3d/include/tsunami/l3d/: Solver.hpp
src/r2d/include/tsunami/r2d/: Solver.hpp
tests/: CMakeLists.txt
tests/Reworked Prior Model/: main.cpp
tests/Reworked Prior Model/Boundary Conditions/: Boundary Conditions.hpp  Driven_Channel.hpp  Enclosed_Driven_Lid_Cavity.hpp  Enclosed_Shear_Layer.hpp
tests/Reworked Prior Model/Equation_System/: Vorticity_Stream-function.cpp  Vorticity_Stream-function.hpp
tests/Reworked Prior Model/Initial Conditions/: Elliptic_Gaussian.hpp  Initial_Conditions.hpp  Taylor_Green.hpp
tests/Reworked Prior Model/Solver/: FiniteDifference.cpp  FiniteDifference.hpp
tests/application/: application_service_tests.cpp
tests/contracts/: contract_dummy_consumers.cpp  interface_contracts.cpp
tests/core/: diagnostic_tests.cpp
tests/historical/: README.md
tests/smoke/: core_smoke.cpp
tools/architecture/: validate_application_service.py  validate_case_lifecycle.py  validate_diagnostics_failure.py  validate_gui_shell.py  validate_interface_contracts.py  validate_layer_ownership.py  validate_target_graph.py
tools/project-management/github-wbs-import/: github_software_issue_bodies_v0.1.json  github_software_issue_manifest_v0.1.csv  import_software_wbs_to_github_v0.3.py
(+135 files in other folders)
